--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,15 @@
   color: #61dafb;
 }
 
+.customModal {
+  top: 50%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
 textarea {
   width: 100%;
   height: 150px;
