--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,13 @@
   color: #61dafb;
 }
 
+.wispPost {
+  border: 1px solid black;
+  border-radius: 15px;
+  margin: 12px 16px 12px 16px;
+  padding: 8px;
+}
+
 .postWispButton {
   background: #282c34;
   border-radius: 8px;
