--- a/src/App.css
+++ b/src/App.css
@@ -34,10 +34,20 @@
 }
 
 .wispPost {
-  border: 1px solid black;
+  border: 1px solid #282c34;
   border-radius: 15px;
   margin: 12px 16px 12px 16px;
-  padding: 8px;
+  padding: 4px;
+  min-height: 10vh;
+}
+
+.wispPostOwner {
+  font-weight: bold;
+}
+
+.wispPostDate {
+  text-align: right;
+  font-size: 12px;
 }
 
 .postWispButton {
