--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,16 @@
   min-height: 10vh;
 }
 
+.wispReply {
+  border: 1px solid #282c34;
+  border-radius: 15px;
+  margin: 12px 16px 12px 16px;
+  padding: 4px;
+  min-height: 10vh;
+  width: 85%;
+  float: right;
+}
+
 .wispPostOwner {
   font-weight: bold;
 }
@@ -67,6 +77,14 @@
   color:#ffffff;
   height: 24px;
   width: 60px;
+}
+
+.viewRepliesButton {
+  background: #282c34;
+  border-radius: 8px;
+  color:#ffffff;
+  height: 24px;
+  width: 120px;
 }
 
 .wispPostContent {
