--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,14 @@
   width: 120px;
 }
 
+.sharePostButton {
+  background: #282c34;
+  border-radius: 8px;
+  color:#ffffff;
+  height: 24px;
+  width: 75px;
+}
+
 .wispPostContent {
   margin: 4px;
 }
